# Wired

./: .clang-format  .clang_format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: checker.yaml  code_coverage.yaml  linux-setup.yaml  linux.yaml  setup-ubuntu-latest.yaml  setup-windows-latest.yaml  setup.yaml  static_analysis.yaml  unit_tests.yaml  windows-setup.yaml  windows.yaml
cmake/: Wired-config.cmake  wired-config.cmake
examples/: CMakeLists.txt
examples/chat/: CMakeLists.txt
examples/chat/include/client/: client.h
examples/chat/include/common/: common.h
examples/chat/include/server/: server.h
examples/chat/src/client/: client.cpp  main.cpp
examples/chat/src/server/: main.cpp  server.cpp
examples/simple_application/: CMakeLists.txt  README.md
examples/simple_application/include/: common.h
examples/simple_application/src/: client.cpp  server.cpp
examples/simple_server/: CMakeLists.txt
examples/simple_server/include/: common.h
examples/simple_server/src/: client.cpp  server.cpp
examples/src/: server.cpp
examples/tic-tac-toe/: CMakeLists.txt
examples/tic-tac-toe/include/client/: client.h
examples/tic-tac-toe/include/common/: common.h  tic-tac-toe.h
examples/tic-tac-toe/include/server/: server.h
examples/tic-tac-toe/src/client/: client.cpp  main.cpp
examples/tic-tac-toe/src/common/: tic-tac-toe.cpp
examples/tic-tac-toe/src/server/: main.cpp  server.cpp
include/: wired.h
include/wired/: client.h  concepts.h  connection.h  message.h  message_io.h  server.h  ts_deque.h  types.h
include/wired/tools/: log.h
tests/playground/: CMakeLists.txt
tests/playground/include/: playground_types.h
tests/playground/src/: main.cpp
tests/static_analyzer/: CMakeLists.txt
tests/unit/: CMakeLists.txt  generate_cert.py
tests/unit/include/: test_client.h  test_enums.h  test_server.h  test_types.h
tests/unit/src/: client_server_tests.cpp  connection_tests.cpp  main.cpp  message_tests.cpp  sanity.cpp  server_tests.cpp
uml/: Melpo.vpp
